Removed commons-io dependency in favor of java.nio API